<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">


<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:background="@drawable/home_bg_gradient"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v4.view.ViewPager
            android:id="@+id/bg_vp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_190sdp"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/_10sdp"
        android:orientation="vertical"
        android:padding="@dimen/_3sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <ImageView
                android:id="@+id/search_btn"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_search_24dp"
                android:layout_gravity="center"

                />

            <AutoCompleteTextView
                android:id="@+id/search_actv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:maxLines="0"
                android:hint="Search products"
                android:background="#FFFFFF"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <me.relex.circleindicator.CircleIndicator
        android:id="@+id/circleIndicator_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_165sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_250sdp"
        android:background="#FFFFFF"
        android:elevation="@dimen/_5sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:padding="@dimen/_10sdp"
                android:text="Our Products"
                android:textSize="@dimen/_14sdp" />

            <ImageView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="@dimen/_20sdp"
                android:src="@drawable/logo" />

        </RelativeLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="?android:attr/listDivider"
            tools:layout_editor_absoluteY="664dp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp">

                <LinearLayout
                    android:id="@+id/biotrine_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/biotrine" />

                    <TextView
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/biotrine_show"
                        android:textAlignment="center"
                        android:textSize="@dimen/_10sdp"/>
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="?android:attr/listDivider"
                    tools:layout_editor_absoluteX="162dp"
                    tools:layout_editor_absoluteY="8dp" />


                <LinearLayout
                    android:id="@+id/fizimite_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/fizimite" />

                    <TextView
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/fizimite_show"
                        android:textAlignment="center"
                        android:textSize="@dimen/_10sdp"/>
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="?android:attr/listDivider"
                    tools:layout_editor_absoluteX="162dp"
                    tools:layout_editor_absoluteY="8dp" />


                <LinearLayout
                    android:id="@+id/antario_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/antario" />

                    <TextView
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/antario_show"
                        android:textAlignment="center"
                        android:textSize="@dimen/_10sdp"/>
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="?android:attr/listDivider"
                    tools:layout_editor_absoluteX="162dp"
                    tools:layout_editor_absoluteY="8dp" />


                <LinearLayout
                    android:id="@+id/ceranock_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ceranock" />

                    <TextView
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/ceranock_show"
                        android:textAlignment="center"
                        android:textSize="@dimen/_10sdp"/>
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="?android:attr/listDivider"
                    tools:layout_editor_absoluteX="162dp"
                    tools:layout_editor_absoluteY="8dp" />

                <LinearLayout
                    android:id="@+id/fytomax_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/fytomax" />

                    <TextView
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/fytomax_show"
                        android:textAlignment="center"
                        android:textSize="@dimen/_10sdp"/>
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="?android:attr/listDivider"
                    tools:layout_editor_absoluteX="162dp"
                    tools:layout_editor_absoluteY="8dp" />

                <LinearLayout
                    android:id="@+id/recharge_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/recharge" />

                    <TextView
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/recharge_show"
                        android:textAlignment="center"
                        android:textSize="@dimen/_10sdp"/>
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="?android:attr/listDivider"
                    tools:layout_editor_absoluteX="162dp"
                    tools:layout_editor_absoluteY="8dp" />

                <LinearLayout
                    android:id="@+id/zonatrac_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/zonatrac" />

                    <TextView
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/zonatrac_show"
                        android:textAlignment="center"
                        android:textSize="@dimen/_10sdp"/>
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="?android:attr/listDivider"
                    tools:layout_editor_absoluteX="162dp"
                    tools:layout_editor_absoluteY="8dp" />

                <LinearLayout
                    android:id="@+id/yokosan_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/yokosan" />

                    <TextView
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/Yokosan_show"
                        android:textAlignment="center"
                        android:textSize="@dimen/_10sdp"/>
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="?android:attr/listDivider"
                    tools:layout_editor_absoluteX="162dp"
                    tools:layout_editor_absoluteY="8dp" />


                <LinearLayout
                    android:id="@+id/biomax_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/biomax" />

                    <TextView
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/biomax_show"
                        android:textAlignment="center"
                        android:textSize="@dimen/_10sdp"/>
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="?android:attr/listDivider"
                    tools:layout_editor_absoluteX="162dp"
                    tools:layout_editor_absoluteY="8dp" />
            </LinearLayout>

        </HorizontalScrollView>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>

</ScrollView>